--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,9 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
+#map {
+  height: 400px;
+}
 
 
 
